--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,20 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.5.4</version>
+        </dependency>
+
+
+
+
+
+
+
+
 
     </dependencies>
 </project>
